# Minecraft-Mod-Starter

./: .gitignore  CLAUDE.md  README.md  build.gradle  gradle.properties  gradlew  install.ps1  install.sh  settings.gradle  setup.ps1  setup.sh
.github/workflows/: build.yml  release.yml  test-setup.yml
cli/: Cargo.toml
cli/src/: config.rs  error.rs  global_config.rs  gradle.rs  install.rs  main.rs  pack_format.rs  template.rs  util.rs  version_meta.rs  versions.rs
cli/src/commands/: add.rs  config.rs  init.rs  mod.rs  update.rs
cli/templates/: build.gradle.root  gradle.properties  settings.gradle
cli/templates/ci/: build.yml  release.yml
cli/templates/common/: CommonMod.java  CommonMod.kt  ExampleModTest.java  ExampleModTest.kt  build.gradle
cli/templates/fabric/: FabricGameTest.java  FabricGameTest.kt  FabricMod.java  FabricMod.kt  fabric.mod.json  mixin_package_info.java  mixins.json
cli/templates/gradle-wrapper/: gradlew.bat
cli/templates/neoforge/: NeoForgeGameTest.java  NeoForgeGameTest.kt  NeoForgeMod.java  NeoForgeMod.kt  neoforge.mods.toml
cli/templates/stonecutter/: UnifiedMod.java  UnifiedMod.kt  build.gradle.kts  gradle.properties  settings.gradle.kts  stonecutter.gradle.kts  version.gradle.properties
cli/templates/stonecutter/fabric/: build.gradle.kts  fabric.mod.json
cli/templates/stonecutter/neoforge/: build.gradle.kts  neoforge.mods.toml
fabric/: build.gradle
neoforge/: build.gradle
src/main/resources/: fabric.mod.json
test/: normalize-versions.ps1  normalize-versions.sh  run-tests.ps1
test/golden/ci/: build.yml
(+22 files in other folders)
