[package]
name = "mcmod"
version = "0.1.0"
edition = "2021"
description = "CLI tool for scaffolding multi-loader Minecraft mods"

[[bin]]
name = "mcmod"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "1"
ureq = "3"
serde_json = "1"
colored = "3"
thiserror = "2"
